# compresscli

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  LICENSE  README.md
.github/workflows/: build-release.yml  ci.yml
examples/: TESTING_GUIDE.md  batch_script.sh  config.yaml  create_samples.py  create_samples.sh  custom_presets.yaml  custom_video_preset.yaml
examples/samples/: README.md
scripts/: setup-completions.sh
src/: main.rs
src/cli/: args.rs  commands.rs  handlers.rs  mod.rs
src/compression/: batch.rs  image.rs  mod.rs  video.rs
src/core/: config.rs  constants.rs  error.rs  mod.rs
src/ui/: mod.rs  progress.rs
src/utils/: command.rs  file.rs  math.rs  mod.rs  parser.rs  progress.rs  system.rs
