[package]
authors = ["AmitxD"]
categories = ["command-line-utilities", "multimedia"]
description = "A powerful CLI tool for video and image compression"
edition = "2024"
keywords = ["cli", "compression", "ffmpeg", "image", "video"]
license = "MIT"
name = "compresscli"
repository = "https://github.com/amitxd75/compresscli"
version = "0.1.3"

[[bin]]
name = "compresscli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
bytesize = "2.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["color", "derive"] }
clap_complete = "4.5.57"
console = "0.16.1"
dirs = "6.0.0"
env_logger = "0.11.8"
glob = "0.3.3"
image = { version = "0.25.8", features = ["jpeg", "png", "webp"] }
indicatif = { version = "0.18.0", features = ["tokio"] }
log = "0.4.28"
num_cpus = "1.17.0"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
serde_yaml = "0.9.34"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
walkdir = "2.5.0"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.22.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
